It works on my machine (#3)